# stacklock2nix

./: .gitignore  CHANGELOG.md  LICENSE  README.md  flake.nix
.github/: FUNDING.yml
.github/workflows/: ci.yml
dream2nix/: builder.nix  integration-test.nix  translator.nix
dream2nix/example/: flake.nix
example-haskell-package/: README.md  example-haskell-package.cabal  stack.yaml
my-example-haskell-lib/: CHANGELOG.md  LICENSE  README.md  my-example-haskell-lib.cabal  stack.yaml
my-example-haskell-lib-advanced/: .gitignore  README.md  cabal.project  default.nix  flake.nix  shell.nix  stack.yaml
my-example-haskell-lib-advanced/my-example-haskell-app/: my-example-haskell-app.cabal
my-example-haskell-lib-advanced/my-example-haskell-app/app/: Main.hs
my-example-haskell-lib-advanced/my-example-haskell-lib/: README.md  package.yaml
my-example-haskell-lib-advanced/nix/: default.nix  overlay.nix  stack-shell.nix
my-example-haskell-lib-easy/: README.md  cabal.project  flake.nix  hie.yaml  my-example-haskell-lib.cabal  stack.yaml
my-example-haskell-lib-easy/my-example-haskell-app/: README.md  my-example-haskell-app.cabal
my-example-haskell-lib-easy/my-example-haskell-app/app/: Main.hs
my-example-haskell-lib-easy/my-example-haskell-lib/: extra-file  my-example-haskell-lib.cabal
my-example-haskell-lib-easy/my-example-haskell-lib-1/src/: Example1.hs
nix/: default.nix  overlay.nix
nix/build-support/: yaml.nix
nix/build-support/stacklock2nix/: cabal2nixArgsForPkg.nix  default.nix  fetchCabalFileRevision.nix  fetchCabalFileRevisionBuilder.sh  read-yaml.nix  suggestedOverlay.nix
templates/advanced/: README.md  flake.nix  package.yaml  some-app.cabal  stack.yaml
templates/advanced/nix/: default.nix  overlay.nix  stack-shell.nix
test/: default.nix  nixpkgs.nix  test-all-cabal-hashes-is-dir.nix  test-all-cabal-nixes.nix  test-new-package-set.nix
test/test-default-local-package/: default.nix  my-cool-package-foobar.cabal  stack.yaml
test/test-no-local-packages/: default.nix  stack.yaml
