cabal-version: 1.12

name:           my-example-haskell-lib
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/cdepillabout/stacklock2nix#readme>
homepage:       https://github.com/cdepillabout/stacklock2nix#readme
bug-reports:    https://github.com/cdepillabout/stacklock2nix/issues
author:         Dennis Gosnell
maintainer:     cdep.illabout@gmail.com
copyright:      Copyright (c) 2018 Dennis Gosnell
license:        BSD3
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md

source-repository head
  type: git
  location: https://github.com/cdepillabout/stacklock2nix

library
  exposed-modules:
      Lib
  other-modules:
      Paths_my_example_haskell_lib
  hs-source-dirs:
      src
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
  build-depends:
      base >=4.7 && <5
  default-language: Haskell2010

executable my-example-haskell-lib-exe
  main-is: Main.hs
  other-modules:
      Paths_my_example_haskell_lib
  hs-source-dirs:
      app
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , my-example-haskell-lib
  default-language: Haskell2010

test-suite my-example-haskell-lib-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Paths_my_example_haskell_lib
  hs-source-dirs:
      test
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , my-example-haskell-lib
  default-language: Haskell2010
