cabal-version: 1.12

name:           my-example-haskell-app
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/cdepillabout/stacklock2nix#readme>
homepage:       https://github.com/cdepillabout/stacklock2nix#readme
bug-reports:    https://github.com/cdepillabout/stacklock2nix/issues
author:         Your Name Here
maintainer:     you@example.com
copyright:      Copyright (c) 2018 You
license:        BSD3
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md

source-repository head
  type: git
  location: https://github.com/cdepillabout/stacklock2nix

executable my-example-haskell-app
  main-is: Main.hs
  hs-source-dirs: app
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , amazonka
    , my-example-haskell-lib
    , optparse-applicative
    , pretty-simple
    , unagi-streams
  default-language: Haskell2010
